--- a/travel_journal.css
+++ b/travel_journal.css
@@ -27,9 +27,9 @@ section {
     height: 845px;
 }
 
-marker {
-    width: 30px;
-    height: 50px;
+.popup {
+    background-color: rgb(255, 255, 255);
+    border: black solid 2px;
     position: absolute;
 }
 
