Stylized and filled in popup boxes with more info

--- a/travel_journal.css
+++ b/travel_journal.css
@@ -31,6 +31,8 @@ section {
     background-color: rgb(255, 255, 255);
     border: black solid 2px;
     position: absolute;
+    width: 250px;
+    padding-left: 10px;
 }
 
 .florida, .mississippi, .dc, .disney, .spacecenter {
