--- a/travel_journal.css
+++ b/travel_journal.css
@@ -18,8 +18,6 @@ footer {
 }
 
 section {
-    margin-top: 10px;
-    margin-bottom: 10px;
     margin: 0 auto;
     position: relative;
 }
@@ -34,8 +32,9 @@ section {
     background-color: rgb(255, 255, 255);
     border: black solid 2px;
     position: absolute;
-    width: auto;
-    padding-left: 10px;
+    font-size: smaller;
+    max-width: 250px;
+    padding: 5px;
 }
 
 .florida, .mississippi, .dc, .disney, .spacecenter {
